--- a/Starter/css/app.css
+++ b/Starter/css/app.css
@@ -7800,9 +7800,11 @@ a.text-dark:hover, a.text-dark:focus {
   .table .thead-dark th {
     color: inherit;
     border-color: #dee2e6; } }
+html {
+  font-size: 14px; }
+
 body {
-  font-family: "Raleway", sans-serif;
-  background: darkolivegreen; }
+  font-family: "Raleway", sans-serif; }
 
 .navbar {
   font-weight: 100;
@@ -7839,6 +7841,9 @@ body {
   #showcase #book {
     font-size: 1.5rem;
     border-radius: 2rem; }
+
+#id img {
+  width: 275px; }
 
 @media (max-width: 768px) {
   .navbar {
