--- a/Starter/scss/custom.scss
+++ b/Starter/scss/custom.scss
@@ -53,7 +53,13 @@ body {
 
 #id {
     img {
-        width: 275px;;
+        width: 275px;
+    }
+}
+
+#quotes {
+    i {
+        opacity:0.4;
     }
 }
 
