--- a/Starter/scss/custom.scss
+++ b/Starter/scss/custom.scss
@@ -51,7 +51,7 @@ body {
     }
 }
 
-#id {
+#icons {
     img {
         width: 275px;
     }
@@ -61,6 +61,10 @@ body {
     i {
         opacity:0.4;
     }
+}
+
+#footer {
+    font-weight: 100;
 }
 
 @media(max-width:768px) {
