--- a/MuseumOfCandy/app.css
+++ b/MuseumOfCandy/app.css
@@ -1,3 +1,21 @@
 body {
     background:#f5d9d5;
+    font-family: "Nunito", sans-serif;
+}
+
+#mainNavbar .navbar-brand {
+    color:#EA1C2C;    
+}
+
+#mainNavbar .nav-link {
+    color:#FFF;
+}
+
+#mainNavbar .nav-link:hover {
+    color:#EA1C2C;
+}
+
+#mainNavbar {
+    font-size:1.5rem;
+    font-weight:100;
 }
