Added first row of content

--- a/MuseumOfCandy/app.css
+++ b/MuseumOfCandy/app.css
@@ -19,3 +19,26 @@ body {
     font-size:1.5rem;
     font-weight:100;
 }
+
+#heading-group span {
+    color:#EA1C2C;
+}
+
+#heading-group h1 {
+    font-weight: 100;
+    font-size: 4rem;
+}
+
+@media(max-width:1360px) {
+    #heading-group h1 {
+        font-weight: 100;
+        font-size: 3rem;
+    }
+}
+
+@media(max-width:1200px) {
+    #heading-group h1 {
+        font-weight: 100;
+        font-size: 2rem;
+    }
+}
