--- a/MuseumOfCandy/app.css
+++ b/MuseumOfCandy/app.css
@@ -3,6 +3,23 @@ body {
     font-family: "Nunito", sans-serif;
 }
 
+.blurb h2 {
+    color:#EA1C2C;
+    font-weight:100;
+}
+
+.blurb p {
+    color:#f498b8;
+    font-weight:100;
+    font-size:0.9rem;
+    line-height:2;
+}
+
+.content {
+    margin-top:10px;
+    margin-bottom:10px;
+}
+
 #mainNavbar .navbar-brand {
     color:#EA1C2C;    
 }
