--- a/MuseumOfCandy/app.css
+++ b/MuseumOfCandy/app.css
@@ -46,6 +46,11 @@ body {
     font-size: 4rem;
 }
 
+.navbar.scrolled {
+    background:rgb(222,192,222);
+    transition: background 300ms;
+}
+
 @media(max-width:1360px) {
     #heading-group h1 {
         font-weight: 100;
